Fix GameBox being cut off at bottom, and update Idyll.

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ button:hover {
   background-color: white;
   border: 2px solid black;
   border-radius: 15px;
+  padding-bottom: 10px;
 }
 
 .GameBox::after {
